--- a/css/styles.css
+++ b/css/styles.css
@@ -65,13 +65,13 @@ body {
 }
 /*TITULO*/
 .titulo {
-  font-size: 45px;
+  font-size: 55px;
   color: #66f3ad;
   text-align: center;
   float: left;
   text-shadow: 1px 2px 2px black, 0 0 25px rgb(35, 209, 142), 0 0 5px rgb(30, 43, 219);
   animation-duration: 2s;
-  padding: 2% 2%;
+  padding-top: 1%;
 }
 
 /*BARRA DE NAVEGACION*/
@@ -84,7 +84,8 @@ body {
   max-width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
+  padding: 0 7%;
 }
 
 nav ul {
@@ -94,7 +95,7 @@ nav ul {
 }
 nav li {
   text-align: center;
-  padding: 2px 15px;
+  padding: 2% 2%;
   font-family: "Baskervville SC", serif;
   font-weight: 400;
   font-style: normal;
@@ -340,48 +341,34 @@ h2 {
 
 /*PRODUCTOS*/
 #product-container {
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.sectores {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  padding-right: 25%;
-  padding-bottom: 5%;
-  background-color: transparent;
 }
 
 .productos {
-  background-color: rgba(47, 49, 49, 0.5);
-  width: 350px;
-  height: 400px;
-  margin-left: 60%;
-  margin-top: 10%;
-  color: #ffffff;
-  padding-bottom: 15%;
-  padding-top: 5%;
-  align-items: center;
-  padding-left: 15%;
-  border-radius: 10px;
-  transition: 0.5s;
-  box-shadow: 0 0 6px 0 rgba(255, 255, 255, 0.8);
-}
-
-.productos p {
-  margin-top: 3%;
-}
-
-#product-container img {
-  width: 250px;
+  background-color: rgba(255, 255, 255, 0.5);
+  box-shadow: 0 0 6px 0 rgba(163, 158, 158, 0.8);
+  width: 25%;
   height: 300px;
+  margin: 2%;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.productos img {
+  width: 90%;
+  height: 60%;
+  margin: 2%;
   border-radius: 10px;
 }
 
-.sector1 .productos:hover {
-  transform: scale(1.1);
-  background-image: linear-gradient(rgb(243, 127, 247), rgb(101, 247, 101));
-  color: black;
-}
-
-.sector2 .productos:hover {
+.productos:hover {
   transform: scale(1.1);
   background-image: linear-gradient(rgb(243, 127, 247), rgb(101, 247, 101));
   color: black;
@@ -514,7 +501,7 @@ input:focus ~ .barra::before, textarea:focus ~ textarea::before {
   }
 }
 /* RESPONSIVE  */
-@media (max-width: 1080px) {
+@media (max-width: 1300px) {
   /* NAVBAR*/
   #navbar {
     display: flex;
