--- a/css/contacto.css
+++ b/css/contacto.css
@@ -92,16 +92,17 @@ input:focus ~ .barra::before, textarea:focus ~ textarea::before {
 
 .bt-form {
   background: #fc5c7d;
-  background: linear-gradient(to right, #3c55d1, #fc5c7d);
+  background: linear-gradient(to right, #f290ff, #2dff03);
   display: block;
   width: 200px;
-  height: 50px;
+  height: 60px;
   border: none;
-  color: white;
+  color: rgb(0, 0, 0);
   border-radius: 4px;
-  font-size: 20px;
+  font-size: 30px;
   margin: 20px auto 10px auto;
   cursor: pointer;
+  box-shadow: 1px 2px 2px black, 0 0 25px rgb(253, 253, 253), 0 0 5px rgb(30, 43, 219);
 }
 .bt-form a {
   text-decoration: none;
