--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,7 @@
   width: 490px;
   height: 300px;
   margin-bottom: 8%;
+  border-radius: 15px;
 }
 
 #grid-nosotros p {
@@ -718,7 +719,7 @@ h2 {
   }
   #grid-nosotros .picture img {
     margin: 2%;
-    width: 100%;
+    width: 97%;
     height: 280px;
     align-items: center;
   }
