--- a/css/styles.css
+++ b/css/styles.css
@@ -652,6 +652,7 @@ h2 {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    padding-top: 7%;
   }
   .footer p {
     font-size: 20px;
