--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -478,11 +478,14 @@ h2{
         display: flex;
         flex-direction: column;
         justify-content: space-around;
+        padding-top: 7%;
+        
     }
 
     .footer p {
         font-size: 20px;
         text-align: center;
+        
       }
       
       .footer ul li {
